--- a/index.html
+++ b/index.html
@@ -24,102 +24,11 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="./CSS/style.css" />
-
+    <link rel="stylesheet" href="./CSS/footer-style.css" />
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5">
-      <nav
-        class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
-        data-bs-theme="dark"
-      >
-        <div class="container">
-          <a class="navbar-brand m-lg-0" href="#">
-            <img src="./IMG/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse align-items-center justify-content-center" id="navbarSupportedContent">
-            <div id="elementosNavbar">
-              <ul class="navbar-nav mx-lg-5 mx-md-4" id="listaNavbar">
-                <div class="d-flex mb-md-1" id="elementosNav">
-                  <li
-                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                    id="itemNav"
-                  >
-                    <a class="nav-link active fs-5" aria-current="page" href="#">
-                      Inicio
-                    </a>
-                  </li>
-                  <li
-                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                  >
-                    <a class="nav-link fs-5" href="./pages/listaDeReproduccion.html"> Lista de reproduccion </a>
-                  </li>
-                  <li
-                    class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                  >
-                    <a
-                      class="nav-link dropdown-toggle fs-5"
-                      href="#"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Administrador
-                    </a>
-                    <ul class="dropdown-menu text-center">
-                      <li class="text-center">
-                        <a
-                          class="dropdown-item fs-5"
-                          href="./pages/abmCanciones.html"
-                          >ABM Canciones</a
-                        >
-                      </li>
-                      <li class="text-center">
-                        <a class="dropdown-item fs-5" href="./pages/abmAlbumes.html"
-                          >ABM Albumes</a
-                        >
-                      </li>
-                      <li class="text-center">
-                        <a class="dropdown-item fs-5" href="./pages/abmArtistas.html"
-                          >ABM Artistas</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </div>
-              </ul>
-            </div>
-            <div class="d-flex flex-column">
-              <button
-                class="btn btn-success my-3 fs-6 botonesUsuario"
-                type="submit"
-                onclick="location.href='./pages/iniciarSesion.html';"
-              >
-                Iniciar sesión
-              </button>
-              <button
-                class="btn btn-success fs-6 botonesUsuario"
-                type="submit"
-                onclick="location.href='./pages/registro.html';"
-              >
-                Registrate
-              </button>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <section class="container-fluid seccion-carousel">
         <div id="carouselExample" class="carousel slide h-100">
@@ -144,235 +53,139 @@
           </button>
         </div>
       </section>
-      <h2 class="text-white mx-3 mt-5">Canciones destacadas</h2>
-      <section class="my-3 mx-0" id="seccionCanciones"></section>
-      <section class="my-5">
-        <div class="d-flex flex-column container">
-          <div>
-            <h2 class="text-white mx-3 mt-5">Todas las canciones</h2>
+      <section class="container">
+        <h2 class="text-white mx-3 mt-5">Canciones destacadas</h2>
+        <section class="my-3 mx-0" id="seccionCanciones"></section>
+        <section class="my-5">
+          <div class="d-flex flex-column container">
+            <div>
+              <h2 class="text-white mx-3 mt-5">Todas las canciones</h2>
+            </div>
+            <div class="d-flex">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Buscar Canción"
+                id="inputBuscarCancion"
+              />
+            </div>
+            <div class="row m-0" id="rowInyectarCanciones"></div>
           </div>
-          <div class="d-flex">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Buscar Canción"
-              id="inputBuscarCancion"
-            />
-          </div>
-          <div class="row m-0" id="rowInyectarCanciones"></div>
-        </div>
-      </section>
-      <section class="my-5">
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Básico: "Melodía Esencial"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $4.99 al mes</li>
-                    <li>
-                      Acceso ilimitado a la biblioteca de música estándar.
-                    </li>
-                    <li>Calidad de transmisión estándar (128 kbps).</li>
-                    <li>Anuncios ocasionales entre canciones.</li>
-                    <li>
-                      Posibilidad de crear listas de reproducción
-                      personalizadas.
-                    </li>
-                    <li>
-                      Descarga de hasta 30 canciones al mes para escuchar sin
-                      conexión.
-                    </li>
-                    <li>Soporte en dispositivos móviles y de escritorio.</li>
-                  </ul>
+        </section>
+        <section class="my-5 container">
+          <div class="container text-center">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Básico: "Melodía Esencial"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $4.99 al mes</li>
+                      <li>
+                        Acceso ilimitado a la biblioteca de música estándar.
+                      </li>
+                      <li>Calidad de transmisión estándar (128 kbps).</li>
+                      <li>Anuncios ocasionales entre canciones.</li>
+                      <li>
+                        Posibilidad de crear listas de reproducción
+                        personalizadas.
+                      </li>
+                      <li>
+                        Descarga de hasta 30 canciones al mes para escuchar sin
+                        conexión.
+                      </li>
+                      <li>Soporte en dispositivos móviles y de escritorio.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
                 </div>
-                <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
+              </div>
+              <div class="col-lg-4 col-md-6 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Estándar: "Armonía Completa"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $9.99 al mes</li>
+                      <li>
+                        Acceso completo a la biblioteca de música premium.
+                      </li>
+                      <li>Calidad de transmisión mejorada (320 kbps).</li>
+                      <li>Sin anuncios durante la reproducción.</li>
+                      <li>
+                        Creación de listas de reproducción ilimitadas y
+                        personalizadas.
+                      </li>
+                      <li>
+                        Descarga ilimitada de canciones para escuchar sin
+                        conexión.
+                      </li>
+                      <li>Función de recomendaciones personalizadas.</li>
+                      <li>
+                        Soporte en dispositivos móviles, de escritorio y
+                        dispositivos inteligentes.
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mt-3">
+                <div class="card custom-card">
+                  <div class="card-body text-bg-dark p-3">
+                    <h5 class="card-title my-3">
+                      Plan Premium: "Sinfonía Total"
+                    </h5>
+                    <ul class="text-start">
+                      <li>Precio: $14.99 al mes</li>
+                      <li>
+                        Acceso a la biblioteca completa de música, incluyendo
+                        lanzamientos exclusivos.
+                      </li>
+                      <li>
+                        Calidad de transmisión de alta fidelidad (lossless).
+                      </li>
+                      <li>Reproducción sin interrupciones y sin anuncios.</li>
+                      <li>
+                        Creación de listas de reproducción colaborativas con
+                        otros usuarios.
+                      </li>
+                      <li>
+                        Descarga ilimitada de canciones y álbumes completos para
+                        escuchar sin conexión.
+                      </li>
+                      <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
+                      <li>
+                        Soporte en dispositivos móviles, de escritorio,
+                        dispositivos inteligentes y sistemas de audio de alta
+                        gama.
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="card-footer bg-dark">
+                    <a href="./pages/error404.html" class="btn btn-primary"
+                      >Saber más</a
+                    >
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Estándar: "Armonía Completa"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $9.99 al mes</li>
-                    <li>Acceso completo a la biblioteca de música premium.</li>
-                    <li>Calidad de transmisión mejorada (320 kbps).</li>
-                    <li>Sin anuncios durante la reproducción.</li>
-                    <li>
-                      Creación de listas de reproducción ilimitadas y
-                      personalizadas.
-                    </li>
-                    <li>
-                      Descarga ilimitada de canciones para escuchar sin
-                      conexión.
-                    </li>
-                    <li>Función de recomendaciones personalizadas.</li>
-                    <li>
-                      Soporte en dispositivos móviles, de escritorio y
-                      dispositivos inteligentes.
-                    </li>
-                  </ul>
-                </div>
-                <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 mt-3">
-              <div class="card custom-card">
-                <div class="card-body text-bg-dark p-3">
-                  <h5 class="card-title my-3">
-                    Plan Premium: "Sinfonía Total"
-                  </h5>
-                  <ul class="text-start">
-                    <li>Precio: $14.99 al mes</li>
-                    <li>
-                      Acceso a la biblioteca completa de música, incluyendo
-                      lanzamientos exclusivos.
-                    </li>
-                    <li>
-                      Calidad de transmisión de alta fidelidad (lossless).
-                    </li>
-                    <li>Reproducción sin interrupciones y sin anuncios.</li>
-                    <li>
-                      Creación de listas de reproducción colaborativas con otros
-                      usuarios.
-                    </li>
-                    <li>
-                      Descarga ilimitada de canciones y álbumes completos para
-                      escuchar sin conexión.
-                    </li>
-                    <li>Acceso a eventos en vivo y conciertos exclusivos.</li>
-                    <li>
-                      Soporte en dispositivos móviles, de escritorio,
-                      dispositivos inteligentes y sistemas de audio de alta
-                      gama.
-                    </li>
-                  </ul>
-                </div>
-                <div class="card-footer bg-dark">
-                  <a href="#" class="btn btn-primary">Saber más</a>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
+        </section>
       </section>
     </main>
-    <footer>
-      <div class="text-center py-3">
-        <div class="row m-0">
-          <div
-            class="col-12 col-sm-12 col-md-12 col-lg-3"
-            id="contenedorLogoFooter"
-          >
-            <a
-              href="index.html"
-              class="contenedorLogo d-flex justify-content-center"
-            >
-              <img
-                src="./img/logosoundg3.png"
-                alt="Logo"
-                class=""
-                id="imgFooter"
-              />
-            </a>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Productos</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ingresar</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href="./pages/registro.html"
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Registro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Acerca de</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Acerca de Nosotros</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ayuda</a
-                >
-              </li>
-            </ul>
-            <div class="d-flex flex-column">
-              <p class="text-light">Síguenos en nuestras redes:</p>
-              <div class="d-flex justify-content-center">
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-instagram fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-facebook fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-twitter fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-linkedin fs-3 m-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Legales</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Información Legal</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Privacidad</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid d-flex justify-content-center">
-        <p class="text-light">
-          &copy; Sound G3 - Todos los derechos reservados
-        </p>
-      </div>
-    </footer>
+    <footer id="inyectarFooter"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -384,5 +197,7 @@
     ></script>
     <script src="./JS/localStorage.js"></script>
     <script src="./JS/index.js"></script>
+    <script src="./JS/navbar.js"></script>
+    <script src="./JS/footer.js"></script>
   </body>
 </html>
