--- a/pages/abmArtistas.html
+++ b/pages/abmArtistas.html
@@ -25,123 +25,12 @@
     />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/abmStyle.css" />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
+    <link rel="stylesheet" href="../CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
-    <header class="fixed-top mb-5">
-      <nav
-        class="efectoBlur navbar navbar-expand-md bg-body-tertiary navbar bg-dark border-bottom border-body py-3"
-        data-bs-theme="dark"
-      >
-        <div class="container">
-          <a class="navbar-brand m-lg-0" href="#">
-            <img src="../img/logosoundg3.png" alt="g3SoundGIF" id="imglogo" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div id="elementosNavbar">
-              <ul class="navbar-nav mx-lg-5" id="listaNavbar">
-                <div class="d-flex mb-md-1" id="elementosNav">
-                  <li
-                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                    id="itemNav"
-                  >
-                    <a
-                      class="nav-link active"
-                      aria-current="page"
-                      href="../index.html"
-                    >
-                      Inicio
-                    </a>
-                  </li>
-                  <li
-                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                  >
-                    <a class="nav-link" href="#"> Libreria</a>
-                  </li>
-                  <li
-                    class="nav-item p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                  >
-                    <a class="nav-link" href="#"> Lista de reproduccion </a>
-                  </li>
-                  <li
-                    class="nav-item dropdown p-lg-2 px-xl-2 mx-md-2 py-md-2 py-sm-3 d-flex justify-content-center align-items-center justify-content-sm-start"
-                  >
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Administrador
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li class="text-center">
-                        <a class="dropdown-item" href="./abmCanciones.html"
-                          >ABM Canciones</a
-                        >
-                      </li>
-                      <li class="text-center">
-                        <a class="dropdown-item" href="./abmAlbumes.html"
-                          >ABM Albumes</a
-                        >
-                      </li>
-                      <li class="text-center">
-                        <a class="dropdown-item" href="#">ABM Artistas</a>
-                      </li>
-                    </ul>
-                  </li>
-                </div>
-                <form
-                  class="d-flex justify-content-center align-items-center p-lg-0 px-xl-2"
-                  role="search"
-                >
-                  <input
-                    id="inputBuscar"
-                    class="form-control me-2 p-lg-2 mx-xl-2"
-                    type="search"
-                    placeholder="Buscar"
-                    aria-label="Buscar"
-                  />
-                  <a href="#" type="submit" id="buscarNavbar" class="mx-2">
-                    <i
-                      class="fa-solid fa-magnifying-glass"
-                      style="color: #ffffff"
-                    ></i>
-                  </a>
-                </form>
-              </ul>
-            </div>
-            <div class="d-flex flex-column">
-              <button
-                class="btn btn-success my-3 fs-5 botonesUsuario"
-                type="submit"
-              >
-                Iniciar sesión
-              </button>
-              <button
-                class="btn btn-success fs-5 botonesUsuario"
-                type="submit"
-                onclick="location.href='./pages/registro.html';"
-              >
-                Registrate
-              </button>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <header class="fixed-top mb-5" id="inyectarNavbar"></header>
     <main>
       <div class="botonesABM">
         <button
@@ -191,7 +80,11 @@
                     <label for="imagenURL" class="form-label"
                       >URL de la imagen del artista</label
                     >
-                    <input type="url" class="form-control" id="imagenURLAgregar" />
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="imagenURLAgregar"
+                    />
                   </div>
                   <div class="mb-3">
                     <label for="imagenBackgroundURL" class="form-label"
@@ -211,7 +104,11 @@
                     >
                       Cerrar
                     </button>
-                    <button type="button" class="btn btn-primary" id="botonAgregar">
+                    <button
+                      type="button"
+                      class="btn btn-primary"
+                      id="botonAgregar"
+                    >
                       Guardar cambios
                     </button>
                   </div>
@@ -232,112 +129,7 @@
         <tbody id="cuerpoTablaArtistas"></tbody>
       </table>
     </main>
-    <footer>
-      <div class="text-center py-3">
-        <div class="row m-0">
-          <div
-            class="col-12 col-sm-12 col-md-12 col-lg-3"
-            id="contenedorLogoFooter"
-          >
-            <a
-              href="index.html"
-              class="contenedorLogo d-flex justify-content-center"
-            >
-              <img
-                src="./img/logosoundg3.png"
-                alt="Logo"
-                class=""
-                id="imgFooter"
-              />
-            </a>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Productos</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ingresar</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Registro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Acerca de</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Acerca de Nosotros</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ayuda</a
-                >
-              </li>
-            </ul>
-            <div class="d-flex flex-column">
-              <p class="text-light">Síguenos en nuestras redes:</p>
-              <div class="d-flex justify-content-center">
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-instagram fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-facebook fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-twitter fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-linkedin fs-3 m-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Legales</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Información Legal</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Privacidad</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid d-flex justify-content-center">
-        <p class="text-light">
-          &copy; Sound G3 - Todos los derechos reservados
-        </p>
-      </div>
+    <footer id="inyectarFooter">
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -351,5 +143,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/abmArtistas.js"></script>
+    <script src="../JS/footerPage.js"></script>
+    <script src="../JS/navbarPage.js"></script>
+    <script src="../JS/validaciones/abmAdmin.js"></script>
   </body>
 </html>
