--- a/pages/error404.html
+++ b/pages/error404.html
@@ -3,102 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Página de error 404" />
+    <meta name="keywords" content="error, 404, error 404" />
+    <meta name="author" content="Sound3G" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../CSS/style.css" />
-    <title>Registrate</title>
+    <link rel="stylesheet" href="../CSS/footer-style.css" />
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style404.css" />
+    <title>Error 404</title>
   </head>
   <body>
-    <main id="mainRegistro">
-      <section class="container contenedorForm py-3">
-        <h3 class="text-center mb-3">
-          <b>Regístrate para empezar <br />a escuchar contenido</b>
-        </h3>
-        <form class="row d-flex justify-content-center">
-          <fieldset>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="nombre" class="form-label">Tu Nombre</label>
-              <input
-                type="text"
-                class="form-control mb-2"
-                id="nombre"
-                placeholder="Tu Nombre"
-                minlength="3"
-                maxlength="25"
-                required
-              />
-            </div>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="nombredeUsuario" class="form-label"
-                >Nombre de Usuario</label
-              >
-              <div class="input-group has-validation">
-                <input
-                  type="text"
-                  class="form-control"
-                  id="nombredeUsuario"
-                  aria-describedby="inputGroupPrepend3 nombredeUsuarioFeedback"
-                  placeholder="Nombre de usuario"
-                  minlength="6"
-                  maxlength="20"
-                  required
-                />
-              </div>
-            </div>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="email" class="form-label">Correo Electrónico</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                placeholder="ejemplo@mail.com"
-                minlength="16"
-                maxlength="50"
-                required
-              />
-            </div>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="contraseña" class="form-label">Contraseña</label>
-              <input
-                type="password"
-                class="form-control focus-ring py-1 px-2 text-decoration-none border rounded-2"
-                id="contraseña"
-                minlength="8"
-                maxlength="16"
-                required
-              />
-            </div>
-            <div class="col-md-12 col-xl-12 col-sm-12 pb-3">
-              <label for="confirmarContraseña" class="form-label"
-                >Confirmar Contraseña</label
-              >
-              <input
-                type="password"
-                class="form-control focus-ring py-1 px-2 text-decoration-none border rounded-2"
-                id="confirmarContraseña"
-                minlength="8"
-                maxlength="16"
-                required
-              />
-            </div>
-          </fieldset>
-        </form>
-        <div class="d-grid">
-          <button class="btn btn-success" id="btnRegistrarse">
-            Crear Cuenta
-          </button>
-        </div>
-        <div class="d-flex flex-row justify-content-center">
-          <p class="pe-3 pt-3" id="textoRegistro">¿Ya tienes una cuenta?</p>
-          <a href="./login.html" class="text-decoration-none pt-3 ps-3"
-            >Inicia Sesión</a
-          >
-        </div>
-      </section>
+    <header class="fixed-top mb-5" id="inyectarNavbar">    
+    </header>
+    <main class="fondopag">
+      <img
+        id="fondogr"
+        src="../img/fondo.png"
+        class="text-center fondo mb-0"
+        alt="imagen de error 404 con auriculares"
+      />
+      <img id="fondoch" class="text-center" src="../img/fondosm.png" alt="" />
+
+      <h1 class="text-center ohno">¡Oh no!</h1>
+      <h2 class="text-center text-white display-6">
+        No encontramos la pagina que buscas. Lo sentimos mucho.
+      </h2>
+
+      <div class="text-center" id="boton">
+        <a
+          href="../index.html"
+          role="button"
+          class="btn btn-lg botonDegradado botonInicio mb-3 text-white mt-3"
+          >Volver al inicio</a
+        >
+      </div>
     </main>
     <footer>
       <div class="text-center py-3">
@@ -108,7 +51,7 @@
             id="contenedorLogoFooter"
           >
             <a
-              href="index.html"
+              href="../index.html"
               class="contenedorLogo d-flex justify-content-center"
             >
               <img
@@ -126,14 +69,14 @@
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./iniciarSesion.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Ingresar</a
                 >
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./registro.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Registro</a
                 >
@@ -154,7 +97,7 @@
               </li>
               <li class="mt-3 list-unstyled">
                 <a
-                  href=""
+                  href="./error404.html"
                   class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
                   >Ayuda</a
                 >
@@ -208,12 +151,9 @@
       </div>
     </footer>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      src="https://kit.fontawesome.com/166a168cfc.js"
       crossorigin="anonymous"
     ></script>
-    <script src="../JS/localStorage.js"></script>
-    <script src="../JS/registro.js"></script>
-    <script src="../JS/validaciones/validarRegistro.js"></script>
+    <script src="../JS/navbarPage.js"></script>
   </body>
 </html>
